* Examines reuslt-code in CEA and acts on it.
* Error-bit was not set in error responses for protocol errors.
* Vendor-specific accounting applications in the CE messages were incorrectly
  sent as vendor-specific authentication applications.
* Log vendor-specific applications during capability negotiation.

Changes 0.9.2 -> 0.9.3
* On shutdown peers were sent a DPR with disconnect-cause='busy' instead of the
  (correct) 'rebooting' cause.
* It is now possible to have a (small) grace period for making a clean
  shutdown of connections waiting for reception of DPA. This has mostly
  academic interest. The default is to send DPR and close immediately.
* An CEA was erroneously sent as response to an unhandled CEA
* Idle timeout changed from 1 hour to 7 days.
* NodeSettings.???watchdoginterval() and NodeSettings.???idleTimeout() added.
* NPE when new inbound connection lost election
* Support for connecting to relays
* Connecting to peers on non-standard ports resulted in not being able to
  send messages to them due to port mismatch when looking up the peer.
* Added note about restoring hop-by-hop-identifier when forwarding answers
  with NodeManager.forwardAnswer()
* Added example relay to show per-message state handling in NodeManager.
* Message.prepareAnswer() and Messageheader.prepareAnswer() was added. They
  are identical to prepareResponse() but more appropriately named.

Changes 0.9.1 -> 0.9.2
* Reset TCP connection when non-diameter traffic is encountered (RFC3588
  section 8). Previously, the connection was simply closed.
* waitforConnection() was not working right.
* Moved session-id generation to Node
* Added credit-control example
* Raw packets were not logged with log-level=FINEST
* AVP.setM() method added
* Shutting down a node could in some cases result in a NullPointerException
  in "Diameter node reconnect thread"

Changes 0.9.0 -> 0.9.1
* Node.waitForConnection() and NodeManager.waitForConnection() added.